2013-12-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/cryptodisk.c: Rename "n" to "last_cryptodisk_id".

2013-12-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkimagexx.c (relocate_addresses): Display offset rather
	than almost useless pointer.

2013-12-15  Vladimir Serbinenko  <phcoder@gmail.com>

	Add gcc_struct to all packed structures when compiling with mingw.

	Just "packed" doesn't always pack the way we expect.

2013-12-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/i386/coreboot/lbio.h: Add missing attribute (packed).

2013-12-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-pe2elf.c: Fix handling of .bss.

2013-12-14  Vladimir Serbinenko  <phcoder@gmail.com>

	Implement windows flavour of EFI install routines.

2013-12-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* conf/Makefile.extra-dist: Adjust path to conf/i386-cygwin-img-ld.sc.

2013-12-14  Vladimir Serbinenko  <phcoder@gmail.com>

	Change grub_install_register_efi interface to pass GRUB device.

	This allows grub_install_register_efi to request partition info
	directly.

2013-12-14  Vladimir Serbinenko  <phcoder@gmail.com>

	Workaround cygwin bug when using \\?\Volume{GUID} syntax.

2013-12-14  Vladimir Serbinenko  <phcoder@gmail.com>

	Do not use TCHAR string functions as they are not available on cygwin.

2013-12-14  Vladimir Serbinenko  <phcoder@gmail.com>

	Workaround windows bug when querying EFI system partition parameters.

2013-12-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/i386/qemu/init.c (resource): Decrease struct size
	by using bitfields.

2013-12-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/boot/i386/qemu/boot.S: Add missing EXT_C.

2013-12-14  Vladimir Serbinenko  <phcoder@gmail.com>

	Make i386-* other than i386-pc compileable under cygwin.

2013-12-14  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix definition of grub_efi_hard_drive_device_path. Take care that